syntax = "proto3";
package poesg.poesg.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "poesg/v1beta/claim.proto";


option go_package = "github.com/lukitsbrian/poe-sg/x/poesg/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc AllClaim(QueryAllClaimRequest) returns (QueryAllClaimResponse);
}

// this line is used by starport scaffolding # 3
message QueryAllClaimRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllClaimResponse {
	repeated MsgClaim claim = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
